objects/DXBigObject__b.object
<CustomObject>
    <description>For https://app.intercom.com/a/apps/h0kayiwv/inbox/inbox/2496505/conversations/18919400017330</description>
    <fields>
        <fullName>SomeNumber__c</fullName>
        <label>SomeNumber</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomeText__c</fullName>
        <label>SomeText</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>someshorttext__c</fullName>
        <label>someshorttext</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <indexes>
        <fullName>TwoFieldIndex</fullName>
        <fields>
            <name>SomeNumber__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>someshorttext__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <label>TwoFieldIndex</label>
    </indexes>
    <label>DXBigObject</label>
    <pluralLabel>DXBigObjects</pluralLabel>
</CustomObject>